# CShell

./: .gitignore  CMakeLists.txt  Makefile  README.md  builtins.c  main.c
src/: builtins.c  builtins.h  colors.h  main.c
